# garagem

./: .pdm-python  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_alter_veiculo_modelo.py  0002_categoria.py  0003_acessorio_cor_veiculo.py  0004_nome_veiculo_nome.py  0005_rename_nome_modelo_and_more.py  0006_alter_acessorio_options_alter_cor_options_and_more.py  0007_remove_veiculo_nome_veiculo_modelo.py  0008_veiculo_acessorio.py
garagem/models/: __init__.py  acessorio.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: modelo.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
