[project]
name = ""
version = ""
description = ""
authors = [
    {name = "wedley", email = "wedleysilva2105@gmail.com"},
]
dependencies = [
    "django>=4.2.4",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "setuptools>=68.1.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
